// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`idle-rule-general-form Renders \`idle-rule-general-form\` with alarm type 1`] = `
<div
  class="layout column"
>
  <c-name-field-stub
    autofocus=""
    max-length="255"
    required=""
    value=""
  />
  <c-form-block-stub>
    <c-form-block-row-stub
      label="Priority"
    >
      <c-priority-field-stub />
    </c-form-block-row-stub>
    <c-form-block-row-stub
      indented=""
      label="Type"
    >
      <idle-rule-alarm-type-field-stub
        label="Type"
        value="last_event"
      />
    </c-form-block-row-stub>
    <c-form-block-row-stub
      label="Description"
    >
      <c-description-field-stub
        required=""
        value=""
      />
    </c-form-block-row-stub>
    <c-form-block-row-stub
      label="Time range awaiting"
    >
      <c-duration-field-stub
        label="Time range awaiting"
        required=""
        value="[object Object]"
      />
    </c-form-block-row-stub>
    <c-form-block-row-stub
      label="Disable during periods"
    >
      <c-disable-during-periods-field-stub
        value=""
      />
    </c-form-block-row-stub>
    <c-form-block-row-stub
      label="Type"
    >
      <c-action-type-field-stub
        name="operation.type"
        types="snooze,ack,ackremove,cancel,assocticket,changestate,pbehavior"
        value="snooze"
      />
    </c-form-block-row-stub>
    <action-parameters-form-stub
      depth="1"
      name="operation.parameters"
      templatevars="[object Object]"
      type="snooze"
      value="[object Object]"
    />
    <!---->
  </c-form-block-stub>
</div>
`;

exports[`idle-rule-general-form Renders \`idle-rule-general-form\` with entity type 1`] = `
<div
  class="layout column"
>
  <c-name-field-stub
    autofocus=""
    max-length="255"
    required=""
    value=""
  />
  <c-form-block-stub>
    <c-form-block-row-stub
      label="Priority"
    >
      <c-priority-field-stub />
    </c-form-block-row-stub>
    <!---->
    <c-form-block-row-stub
      label="Description"
    >
      <c-description-field-stub
        required=""
        value=""
      />
    </c-form-block-row-stub>
    <c-form-block-row-stub
      label="Time range awaiting"
    >
      <c-duration-field-stub
        label="Time range awaiting"
        required=""
        value="[object Object]"
      />
    </c-form-block-row-stub>
    <c-form-block-row-stub
      label="Disable during periods"
    >
      <c-disable-during-periods-field-stub
        value=""
      />
    </c-form-block-row-stub>
    <!---->
  </c-form-block-stub>
</div>
`;
